Update tests to pass in IntelliJ